--- a/app/templates/partial/ticket_info_news.html
+++ b/app/templates/partial/ticket_info_news.html
@@ -1,36 +1,30 @@
 <ul class="list-group">
     {% for d in data %}
         <li class="list-group-item">
-            <div class="widget-content p-0">
-                    <div class="widget-content-wrapper">
-                        <div class="widget-content-left mr-3">
-                            <div class="widget-content-left">
-                                <img width="100" class="rounded" src="{{d['image']}}" alt="">
-                            </div>
-                        </div>
-                        <div class="widget-content-left flex2 mr-3">
-                            <div class="widget-heading"><ins>{{d['title']}}</ins></div>
-                            <div class="widget-subheading opacity-10">
-                                <p class="pr-2">
-                                    {{d['text']}}
-                                </p>
-                            </div>
-                        </div>
-                        <div class="widget-content-right text-end" style="width:10%;">
-                            <div>
-                                <a href="{{d['url']}}" target="_blank" class="menu__link">
-                                    {{d['site']}}
-                                </a>
-                            </div>
-                            <div class="text-small">{{d['publishedDate']}}</div>
-                            <div>
-                                <a href="{{d['url']}}" target="_blank" class="menu__link article-link">
-                                    Go to Article
-                                </a>
-                            </div>
-                        </div>
+            <div class="row gx-0 flex-between-center flex-fill">
+                <div class="col-auto">
+                    <img width="100" class="rounded img-fluid" src="{{d['image']}}" alt="">
+                </div>
+                <div class="col">
+                    <div class="card-title"><ins>{{d['title']}}</ins></div>
+                    <div class="fs--1">
+                        {{d['text']}}
                     </div>
                 </div>
+                <div class="col-auto">
+                    <div>
+                        <a href="{{d['url']}}" target="_blank" class="">
+                            {{d['site']}}
+                        </a>
+                    </div>
+                    <div class="text-small">{{d['publishedDate']}}</div>
+                    <div>
+                        <a href="{{d['url']}}" target="_blank" class="">
+                            Go to Article
+                        </a>
+                    </div>
+                </div>
+            </div>
         </li>
     {% endfor %}
 </ul>
