testing email added bottom name changed

--- a/app/templates/account/manage.html
+++ b/app/templates/account/manage.html
@@ -47,6 +47,10 @@ Stock Score | Manage
             Account Settings
             <div class="sub header">Manage your account settings and change your login information.</div>
         </h2>
+        <a class="ui basic compact button" href="{{ url_for('account.test_email') }}">
+            <i class="caret right icon"></i>
+            Test email
+        </a>
     </div>
     <div class="stretched divided very relaxed row">
         <div class="four wide column">
