--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -293,7 +293,7 @@
             <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
               <div class="col-12 col-sm-auto text-center">
                 <p class="mb-0 text-600">
-                  Agotrader LTD <span class="d-none d-sm-inline-block">| </span>
+                  Stock Score LTD <span class="d-none d-sm-inline-block">| </span>
                   <br class="d-sm-none" /> 2021 &copy;
                   <a href="mailto:support@stockscore.company">Contact Us</a>
                 </p>
