--- a/app/templates/candidates/today_new.html
+++ b/app/templates/candidates/today_new.html
@@ -433,7 +433,7 @@ docReady(marketEmotionMobileInit);
   <div class="modal-dialog modal-lg mt-6 modal-dialog-scrollable" role="document">
     <div class="modal-content border-0">
         <div class="modal-header bg-light rounded-top-lg py-3 ps-4 pe-4">
-            <h4 class="mb-1" id="signals-modal-label">Movers</h4>
+            <h4 class="mb-1" id="signals-modal-label">Recent signals</h4>
             <button type="button" class="btn-close btn btn-sm btn-circle d-flex flex-center transition-base" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
       <div class="modal-body p-0">
