--- a/app/static/mainpage/css/main.css
+++ b/app/static/mainpage/css/main.css
@@ -808,8 +808,8 @@ h2 {
       justify-content: center;
       text-align: center; } }
   @media only screen and (max-width: 768px) {
-    .analyticsItems {
-      display: none; } }
+    .analytics__col_left {
+      margin-left: 20%; } }
   .analyticsItems__col {
     box-sizing: border-box;
     word-wrap: break-word;
@@ -894,7 +894,7 @@ h2 {
     .score {
       margin-top: 150px; } }
   @media only screen and (max-width: 768px) {
-    .score {
+    .score__text {
       display: none; } }
   .score__col {
     box-sizing: border-box;
@@ -919,7 +919,7 @@ h2 {
   position: relative; }
   @media only screen and (max-width: 768px) {
     .marketEmotion {
-      display: none; } }
+       } }
   .marketEmotion__col {
     box-sizing: border-box;
     word-wrap: break-word;
