--- a/app/templates/candidates/ticker_info_new.html
+++ b/app/templates/candidates/ticker_info_new.html
@@ -188,16 +188,23 @@ Stock Score | Stock Info
 
                                 <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
                                 <label class="btn btn-primary btn-sm news-btn" for="option4" data-limit="40">40</label>
-                            </div>
 
+                                <input type="radio" class="btn-check" name="options" id="option5" autocomplete="off">
+                                <label class="btn btn-primary btn-sm news-btn" for="option5" data-limit="100">100</label>
+                            </div>
                         </div>
-                        <div class="card-body tab-news-card" style="position: relative;">
+                        <div class="card-body tab-news-card">
                             <div class="div-content" ></div>
-                            {% include 'layouts/loader.html' %}
                         </div>
                     </div>`
                 </div>
-                <div class="tab-pane fade" id="tab-insiders" role="tabpanel" aria-labelledby="insiders-tab">Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</div>
+                <div class="tab-pane fade" id="tab-insiders" role="tabpanel" aria-labelledby="insiders-tab">
+                    <div class="main-card mb-3 card">
+                        <div class="card-body tab-insiders-card">
+                            <div class="div-content" ></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="tab-pane fade" id="tab-press-relises" role="tabpanel" aria-labelledby="press-relises-tab">Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</div>
             </div>
         </div>
