--- a/app/templates/partial/ticket_info_news.html
+++ b/app/templates/partial/ticket_info_news.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
     {% for d in data %}
         <li class="list-group-item">
-            <div class="row gx-0 flex-between-center flex-fill d-flex flex-nowrap bd-highlight">
+            <div class="row gx-0 flex-between-center flex-fill d-flex">
                 <div class="col-auto align-self-start">
                     <img width="100" class="rounded img-fluid" src="{{d['image']}}" alt="">
                     <div class="align-self-start d-lg-none">
