--- a/app/templates/candidates/ticker_info_new.html
+++ b/app/templates/candidates/ticker_info_new.html
@@ -205,7 +205,13 @@ Stock Score | Stock Info
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="tab-press-relises" role="tabpanel" aria-labelledby="press-relises-tab">Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</div>
+                <div class="tab-pane fade" id="tab-press-relises" role="tabpanel" aria-labelledby="press-relises-tab">
+                    <div class="main-card mb-3 card">
+                        <div class="card-body tab-press-relises-card" style="position: relative;">
+                            <div class="div-content" ></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
