ticker info test

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -243,7 +243,7 @@ var hist_data = '{{ hist_data|tojson }}';
         crossorigin="anonymous"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/snp_graph.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/spyder_project.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/ticker_info_new.js') }}"></script>
+<!--<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/ticker_info_new.js') }}"></script>-->
 {% endblock %}
 
 {% block modal %}
