ticker info news

--- a/app/templates/partial/ticket_info_news.html
+++ b/app/templates/partial/ticket_info_news.html
@@ -18,13 +18,13 @@
                     </div>
                 </div>
                 </div>
-                <div class="col ps-3 pe-2 bd-highlight">
+                <div class="col ps-3 pe-5 bd-highlight">
                     <div class="card-title"><ins>{{d['title']}}</ins></div>
                     <div class="fs--1">
                         {{d['text']}}
                     </div>
                 </div>
-                <div class="col-md-auto align-self-start d-none d-lg-inline">
+                <div class="col-md-2 align-self-start d-none d-lg-inline">
                     <div>
                         <a href="{{d['url']}}" target="_blank" class="fs--1">
                             {{d['site']}}
