--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -296,7 +296,7 @@ docReady(marketEmotionMobileInit);
         </div>
       <div class="modal-body p-0">
         <div class="p-4">
-            <div class="echart-test" style="min-height: 300px;" data-echart-responsive="true"></div>
+<!--            <div class="echart-test" style="min-height: 300px;" data-echart-responsive="true"></div>-->
             <div id="container_sp500" style="width:100%; height:300px;"></div>
             <div id="container_emotion" style="width:100%; height:300px;"></div>
         </div>
